--- a/mylibraray/build.gradle
+++ b/mylibraray/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.gkhan023'
 
 android {
     compileSdkVersion 26
